--- a/src/scss/filejet-scss/styles.css
+++ b/src/scss/filejet-scss/styles.css
@@ -21826,13 +21826,14 @@ body *::-webkit-scrollbar-thumb {
   font-family: "Sora", sans-serif !important;
 }
 .entityDetails-dashboard .dashboard-page > .container-fluid {
-  display: flex !important;
+  display: grid !important;
+  grid-template-columns: repeat(2, auto);
+  background-color: rgba(223, 223, 223, 0.6) !important;
   height: auto !important;
 }
 .entityDetails-dashboard .dashboard-page > .container-fluid .main-content-wrapper {
   display: flex;
   flex-direction: column;
-  background-color: rgba(223, 223, 223, 0.6);
   flex-grow: 1;
   padding: 0 !important;
   max-width: 100% !important;
@@ -21908,6 +21909,9 @@ body *::-webkit-scrollbar-thumb {
 .entityDetails-dashboard .dashboard-page > .container-fluid .entityDetail-header,
 .entityDetails-dashboard .dashboard-page > .container-fluid .entitydetailsinfo {
   padding-inline: 1.5rem !important;
+}
+.entityDetails-dashboard .dashboard-page > .container-fluid > .container .main-content {
+  background-color: red !important;
 }
 .entityDetails-dashboard .sidebar-wrapper {
   flex-shrink: 0;
